# energisa-demo

./: .env.example  .gitignore  ARCHITECTURE.md  QUICK_START.md  README.md  app.py  livekit.yaml  package.json  pyproject.toml  requirements.txt
backend/: README.md  package.json  pyproject.toml  requirements.txt
backend/src/: __init__.py  config.py  config.ts  index.ts  main.py  models.py  types.ts
backend/src/agent/: __init__.py  gisaPrompt.ts  gisa_prompt.py  voiceAgent.ts  voice_agent.py
backend/src/services/: deepgram.py  deepgram.ts  elevenlabs.py  elevenlabs.ts  gemini.py  gemini.ts
frontend/: index.html  package.json
frontend/src/: App.tsx  index.css
